# fplca

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  README.md  acv-engine.cabal  bench.sh  build-petsc.sh  build.ps1  build.sh  cabal.project  cabal.project.local  cabal.project.local.example  deploy-coverage.sh  docker-build.sh  expected_results.sh  fplca.cabal  fplca.sh  gen-cabal-config.sh  gen-version.sh  hie.yaml  hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  install.ps1  install.sh  lib.sh  petsc.env  release.sh  rts-flags.sh  test-cli.sh  test_samples.sh  versions.env  volca.cabal  volca.toml  worktree-build.sh
.github/workflows/: _build-matrix.yml  build.yml  prebuild-cabal-store.yml  prebuild-mumps.yml  pyvolca-release.yml  pyvolca.yml  release.yml
SAMPLE.edge/: README.md  no-ref-uuid_product-a-uuid.spold  xml-edge-uuid_xml-test-product-uuid.spold  zero-neg-uuid_normal-product-uuid.spold
SAMPLE.min/: activityA_productX.spold  activityB_productX.spold  activityC_productY.spold  activityD_productZ.spold
SAMPLE.min2/: activityD_productZ.spold
SAMPLE.min3/: activityA_productX.spold  activityD_productZ.spold
SAMPLE.min4/: activityB_productY.spold
SAMPLE.min5/: activityA_tonnes.spold
SAMPLE.multiproduct/: 11111111-2222-3333-4444-555555555555_gasoline-uuid.spold  README.md  ffffffff-aaaa-bbbb-cccc-dddddddddddd_main-chemical-uuid.spold
SAMPLE.switching/: 22222222-3333-4444-5555-666666666661_chemical-b-uuid.spold  README.md
SAMPLE.units/: README.md  agriculture-uuid_wheat-uuid.spold  elec-gen-uuid_electricity-uuid.spold  nuclear-power-uuid_nuclear-electricity-uuid.spold  unknown-units-uuid_standard-product-uuid.spold  water-treat-uuid_cooling-water-uuid.spold
app/: Main.hs
cbits/: static-shims.c
data/: flows.csv  units.csv
desktop/: Cargo.toml  build-desktop.ps1  build-desktop.sh  fplca.toml  nsis-hooks.nsh  stage-resources.sh  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
desktop/loading/: index.html
desktop/src/: main.rs
docker/: Dockerfile  docker-build.sh
docs/: release.md
mumps-hs/: mumps-hs.cabal
mumps-hs-0.1.0.0-inplace/: Numerical.MUMPS.FFI.hs.html  Numerical.MUMPS.Solver.hs.html  Numerical.MUMPS.Types.hs.html
mumps-hs/cbits/: mumps_wrapper.c  mumps_wrapper.h
mumps-hs/src/Numerical/: MUMPS.hs
mumps-hs/src/Numerical/MUMPS/: FFI.hs  Solver.hs  Types.hs
pyfplca/: pyproject.toml
pyfplca/examples/: ingredient_substitution.py
pyvolca/: README.md  pyproject.toml
pyvolca/examples/: explore_classifications.py  feed_ratio.py  generate_transformed_ingredients.py  ingredient_substitution.py  raw_ingredient_substitution.py
pyvolca/tests/: conftest.py  test_dispatch.py  test_download.py  test_drift.py  test_exchange_comment.py  test_smoke.py
src/: Config.hs  ConfigWriter.hs  Database.hs  Expr.hs  Main.hs  Matrix.hs  Progress.hs  Service.hs  SharedSolver.hs  SynonymDB.hs  Tree.hs  Types.hs  UnitConversion.hs
src/ACV/: API.hs  Inventory.hs  Matrix.hs  PEF.hs  Progress.hs  Query.hs  Service.hs  Tree.hs  Types.hs  UnitConversion.hs
src/API/: Auth.hs  DatabaseHandlers.hs  JsonOptions.hs  MCP.hs  OpenApi.hs  Resources.hs  Routes.hs  Types.hs
src/CLI/: Client.hs  Command.hs  Parser.hs  Repl.hs  Types.hs
src/Database/: CrossLinking.hs  Loader.hs  Manager.hs  Upload.hs  UploadedDatabase.hs
src/EcoSpold/: Common.hs  CrossDatabaseLinking.hs  Loader.hs  Parser.hs  Parser1.hs  Parser2.hs
src/ILCD/: Parser.hs
src/LCA/: API.hs  Auth.hs  Config.hs  ConfigWriter.hs  DatabaseManager.hs  LCIA.hs  Matrix.hs  Progress.hs  Query.hs  Service.hs  SynonymDB.hs  Tree.hs  Types.hs  UnitConversion.hs  Upload.hs  UploadedDatabase.hs
src/Matrix/: Export.hs
src/Method/: FlowResolver.hs  Mapping.hs  Parser.hs  ParserCSV.hs  ParserSimaPro.hs  Types.hs
src/Plugin/: Bridge.hs  Builtin.hs  Config.hs  Types.hs
src/Search/: BM25.hs  Fuzzy.hs  Normalize.hs
src/Service/: Aggregate.hs
test/: BM25Spec.hs  ConfigSpec.hs  CrossDBInventorySpec.hs  CrossDBSubstitutionSpec.hs  CrossLinkingSpec.hs  EcoSpold1Spec.hs  EcoSpold2Spec.hs  FlowResolverSpec.hs  FuzzySpec.hs  GoldenData.hs  ILCDParserSpec.hs  InventorySpec.hs  LoaderSpec.hs  MCPSchemaSpec.hs  MappingSpec.hs  MatrixConstructionSpec.hs  MatrixExportSpec.hs  MethodSpec.hs  NestedSubstitutionSpec.hs  NormalizeSpec.hs  ParserSpec.hs  PluginSpec.hs  ProgressSpec.hs  ServerSpec.hs  ServiceSpec.hs  SharedSolverSpec.hs  SimaProParserSpec.hs  Spec.hs  SubstitutionSpec.hs  SupplyChainSpec.hs  TestHelpers.hs  TreeSpec.hs  UnitConversionSpec.hs  UploadedDatabaseSpec.hs
test-data/: coal-extraction.spold  electricity-production.spold  expected-results.md  sawnwood-properties_12345678-1234-5678-9abc-12345678aaaa.spold  steel-production.spold
volca-0.6.0-inplace/: API.Types.hs.html  Database.CrossLinking.hs.html  Database.Loader.hs.html  Database.Upload.hs.html  Database.hs.html  EcoSpold.Common.hs.html  EcoSpold.Parser1.hs.html  EcoSpold.Parser2.hs.html  ILCD.Parser.hs.html  Matrix.Export.hs.html  Matrix.hs.html  Method.FlowResolver.hs.html  Method.Mapping.hs.html  Method.Parser.hs.html  Method.ParserCSV.hs.html  Method.ParserSimaPro.hs.html  Method.Types.hs.html  Plugin.Builtin.hs.html  Plugin.Config.hs.html  Plugin.Types.hs.html  Progress.hs.html  Service.hs.html  SharedSolver.hs.html  SimaPro.Expr.hs.html  SimaPro.Parser.hs.html  SynonymDB.Types.hs.html  SynonymDB.hs.html  Tree.hs.html  Types.hs.html  UnitConversion.hs.html
volca-0.6.0-inplace-lca-tests/: CrossLinkingSpec.hs.html  FlowResolverSpec.hs.html  GoldenData.hs.html  HotspotSpec.hs.html  ILCDParserSpec.hs.html  InventorySpec.hs.html  LoaderSpec.hs.html  Main.hs.html  MappingSpec.hs.html  MatrixExportSpec.hs.html  MethodSpec.hs.html  ParserSpec.hs.html  PluginConfigSpec.hs.html  PluginSpec.hs.html  ServerSpec.hs.html  ServiceSpec.hs.html  SharedSolverSpec.hs.html  SimaProParserSpec.hs.html  SupplyChainSpec.hs.html  TestHelpers.hs.html  TreeSpec.hs.html
web/: build.sh  elm.json  index.html  index.html.tmpl  minify.mjs  package-lock.json  package.json
web/src/: Api.elm  (+5 more)
(+120 files in other folders)
