cabal-version:       >=1.10
name:                fplca
version:             0.1.0.0
build-type:          Simple

license:             MIT
license-file:        LICENSE
author:              Toi
maintainer:          toi@example.com
category:            Life Cycle Assessment
synopsis:            Moteur ACV en mémoire vive avec export PEF, CSV et ILCD
description:         Ce projet est un moteur d'évaluation du cycle de vie (ACV) basé sur des fichiers Ecoinvent et PEF, écrit en Haskell.

extra-source-files:  README.md CHANGELOG.md

executable fplca
  main-is:             Main.hs
  hs-source-dirs:      src
  -- for weeder: -fwrite-ide-info -hiedir=.hie
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwrite-ide-info -hiedir=.hie
  -- Use environment variables for PETSc/SLEPc paths
  -- Set PETSC_DIR and SLEPC_DIR before building:
  -- export PETSC_DIR=/path/to/petsc
  -- export SLEPC_DIR=/path/to/slepc
  build-depends:       base >=4.14 && <5
                     , optparse-applicative
                     , text
                     , containers
                     , xeno
                     , filepath
                     , directory
                     , mtl
                     , bytestring
                     , deepseq
                     , parallel
                     , stm
                     , async
                     , conduit
                     , xml-types
                     , servant-server
                     , servant
                     , warp
                     , aeson
                     , aeson-pretty
                     , wai
                     , wai-cors
                     , wai-app-static
                     , binary
                     , zstd
                     , time
                     , hashable
                     , uuid
                     , http-types
                     , network-uri
                     , streaming-commons
                     , vector
                     , vector-binary-instances
                     , containers
                     , random
                     , petsc-hs
                     , unix

  other-modules:     LCA.Types
                     , LCA.Types.API
                     , LCA.Tree
                     , LCA.Matrix
                     , LCA.Matrix.SharedSolver
                     , LCA.Progress
                     , LCA.Query
                     , LCA.API
                     , LCA.Service
                     , LCA.UnitConversion
                     , LCA.CLI.Types
                     , LCA.CLI.Parser
                     , LCA.CLI.Command
                     , EcoSpold.Parser
                     , EcoSpold.Loader
  default-language:    Haskell2010

--executable test-mumps
--  main-is:             test_mumps.hs
--  hs-source-dirs:      .
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base >=4.14 && <5
--                     , petsc-hs
--                     , vector
--                     , time
--  default-language:    Haskell2010

test-suite acv-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  other-modules:       TestHelpers
                     , GoldenData
                     , MatrixConstructionSpec
                     , InventorySpec
                     , ParserSpec
                     , MatrixExportSpec
                     , LCA.Types
                     , LCA.Types.API
                     , LCA.Query
                     , LCA.Matrix
                     , LCA.Matrix.SharedSolver
                     , LCA.Service
                     , LCA.Progress
                     , LCA.UnitConversion
                     , LCA.CLI.Types
                     , LCA.Tree
                     , EcoSpold.Loader
                     , EcoSpold.Parser
  build-depends:       base >=4.14 && <5
                     , hspec
                     , text
                     , containers
                     , vector
                     , vector-binary-instances
                     , bytestring
                     , xeno
                     , directory
                     , filepath
                     , temporary
                     , petsc-hs
                     , deepseq
                     , parallel
                     , binary
                     , zstd
                     , time
                     , hashable
                     , uuid
                     , aeson
                     , mtl
                     , optparse-applicative
                     , async
                     , stm
                     , xml-types
                     , conduit
  default-language:    Haskell2010
