cabal-version:       >=1.10
name:                fplca
version:             0.5.0
build-type:          Simple

license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              Christophe Combelles
maintainer:          ccomb@free.fr
category:            Life Cycle Assessment
synopsis:            In-memory high performance LCA engine
description:         This project is a Life Cycle Assessment (LCA) engine.

extra-source-files:  README.md CHANGELOG.md

executable fplca
  main-is:             Main.hs
  hs-source-dirs:      src
  -- for weeder: -fwrite-ide-info -hiedir=.hie
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwrite-ide-info -hiedir=.hie
  -- Use environment variables for PETSc/SLEPc paths
  -- Set PETSC_DIR and SLEPC_DIR before building:
  -- export PETSC_DIR=/path/to/petsc
  -- export SLEPC_DIR=/path/to/slepc
  build-depends:       base >=4.14 && <5
                     , optparse-applicative
                     , text
                     , containers
                     , xeno
                     , filepath
                     , directory
                     , mtl
                     , bytestring
                     , deepseq
                     , parallel
                     , stm
                     , async
                     , conduit
                     , xml-types
                     , servant-server
                     , servant
                     , servant-multipart
                     , warp
                     , aeson
                     , aeson-pretty
                     , wai
                     , wai-cors
                     , wai-app-static
                     , binary
                     , zstd
                     , time
                     , hashable
                     , uuid
                     , http-types
                     , network-uri
                     , streaming-commons
                     , vector
                     , vector-binary-instances
                     , containers
                     , random
                     , petsc-hs
                     , base64-bytestring
                     , file-embed
                     , toml-reader
                     , filelock
                     , temporary
                     , process

  -- Unix-specific dependency for SIGPIPE handling (not available on Windows)
  if !os(windows)
    build-depends: unix

  other-modules:     LCA.Types
                     , LCA.Types.API
                     , LCA.Tree
                     , LCA.Matrix
                     , LCA.Matrix.SharedSolver
                     , LCA.Progress
                     , LCA.Query
                     , LCA.API
                     , LCA.API.DatabaseHandlers
                     , LCA.Auth
                     , LCA.Service
                     , LCA.UnitConversion
                     , LCA.CLI.Types
                     , LCA.CLI.Parser
                     , LCA.CLI.Command
                     , LCA.Config
                     , LCA.ConfigWriter
                     , LCA.DatabaseManager
                     , LCA.Upload
                     , LCA.UploadedDatabase
                     , EcoSpold.Common
                     , EcoSpold.Parser
                     , EcoSpold.Parser1
                     , EcoSpold.Loader
                     , SimaPro.Parser
                     , LCA.SynonymDB
                     , LCA.SynonymDB.Types
                     , LCA.Method.Types
                     , LCA.Method.Parser
                     , LCA.Method.Mapping
                     , LCA.LCIA
  default-language:    Haskell2010

-- Tool to compile synonym database JSON to embedded binary
executable synonyms-compiler
  main-is:             Tools/SynonymsCompiler.hs
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts
  build-depends:       base >=4.14 && <5
                     , optparse-applicative
                     , text
                     , containers
                     , bytestring
                     , binary
                     , zstd
                     , aeson
                     , vector
                     , deepseq
  other-modules:       LCA.SynonymDB.Types
  default-language:    Haskell2010

--executable test-mumps
--  main-is:             test_mumps.hs
--  hs-source-dirs:      .
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base >=4.14 && <5
--                     , petsc-hs
--                     , vector
--                     , time
--  default-language:    Haskell2010

test-suite acv-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  other-modules:       TestHelpers
                     , GoldenData
                     , MatrixConstructionSpec
                     , InventorySpec
                     , ParserSpec
                     , MatrixExportSpec
                     , MethodSpec
                     , LCA.Types
                     , LCA.Types.API
                     , LCA.Query
                     , LCA.Matrix
                     , LCA.Matrix.SharedSolver
                     , LCA.Service
                     , LCA.Progress
                     , LCA.UnitConversion
                     , LCA.CLI.Types
                     , LCA.Tree
                     , EcoSpold.Common
                     , EcoSpold.Loader
                     , EcoSpold.Parser
                     , EcoSpold.Parser1
                     , LCA.Method.Types
                     , LCA.Method.Parser
                     , LCA.SynonymDB
                     , LCA.SynonymDB.Types
  build-depends:       base >=4.14 && <5
                     , hspec
                     , text
                     , containers
                     , vector
                     , vector-binary-instances
                     , bytestring
                     , xeno
                     , directory
                     , filepath
                     , temporary
                     , petsc-hs
                     , deepseq
                     , parallel
                     , binary
                     , zstd
                     , time
                     , hashable
                     , uuid
                     , aeson
                     , mtl
                     , optparse-applicative
                     , async
                     , stm
                     , xml-types
                     , conduit
                     , file-embed
  default-language:    Haskell2010
