cabal-version:  2.4
name:           mumps-hs
version:        0.1.0.0
synopsis:       Haskell bindings for MUMPS sequential sparse direct solver
license:        AGPL-3.0-or-later
build-type:     Simple

library
  exposed-modules:  Numerical.MUMPS
  other-modules:    Numerical.MUMPS.Types
                  , Numerical.MUMPS.FFI
                  , Numerical.MUMPS.Solver
  hs-source-dirs:   src
  c-sources:        cbits/mumps_wrapper.c
  include-dirs:     cbits
  build-depends:    base >= 4.14 && < 5
                  , vector
  extra-libraries:  dmumps_seq, mumps_common_seq, pord_seq, mpiseq_seq
  default-language: Haskell2010
  ghc-options:      -Wall -O2
